force-app/main/default/objects/SObjectTriggerActionSetting__mdt/SObjectTriggerActionSetting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to control which action is active</description>
    <label>SObjectTriggerActionSetting</label>
    <pluralLabel>SObjectTriggerActionSettings</pluralLabel>
</CustomObject>