force-app/main/default/objects/SObjectTriggerActionSetting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>It is used to store the short description of the trigger actions</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>