force-app/main/default/objects/SObjectTriggerActionSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to activate and deactivate particular trigger actions</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>