force-app/main/default/objects/SObjectTriggerActionSetting__mdt/fields/SObjectTriggerSetting__c.field-meta.xml
<CustomField>
    <fullName>SObjectTriggerSetting__c</fullName>
    <description>It is used to link the trigger actions to the master trigger setting. All the trigger actions will be linked to particular SObject triggers</description>
    <label>SObjectTriggerSetting</label>
    <referenceTo>SObjectTriggerSetting__mdt</referenceTo>
    <relationshipLabel>SObjectTriggerActionSettings</relationshipLabel>
    <relationshipName>SObjectTriggerActionSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>